<resources>
    <string name="app_name">众拉客MVP</string>

    <string name="net_error">网络访问错误，请稍后再试</string>
    <string name="empty">还没有数据哦</string>
    <string name="loading">请稍后...</string>
    <string name="reload">重新尝试</string>
    <string name="no_net">网络不可用,请检查你的网络</string>

    <!-- Login -->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="quick_register">立即注册</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="find_back_pwd">找回密码</string>
    <string name="account_hint">请输入手机号</string>
    <string name="new_account_hint">新手机号码</string>
    <string name="new_account_confirm_hint">请确认新手机号码</string>
    <string name="password_hint">请输入密码</string>
    <string name="current_pwd">当前密码</string>
    <string name="confirm_pwd">请再次输入密码</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="confirm_new_pwd">请确认新密码</string>
    <string name="verify_code_hint">请输入验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="account_check">非法账号,请检查您的账号</string>
    <string name="password_check">请输入6&#8211;16位密码</string>
    <string name="user_real_name">请输入真实姓名</string>
    <string name="register_request">注册代表同意用户协议</string>

    <!-- Common -->
    <string name="img_desc"></string>
    <string name="net_break_tips">您的网络已断开,请检查您的网络设置</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="save">保存</string>
    <string name="photo_take">手机拍照</string>
    <string name="photo_pic">我的相册</string>
    <string name="gender_man">男</string>
    <string name="gender_woman">女</string>
    <string name="next">下一步</string>
    <string name="call_log">通话记录</string>
    <string name="contact">通讯录</string>
    <string name="name">姓名</string>
    <string name="telephone">电话</string>
    <string name="gender_sir">先生</string>
    <string name="gender_lady">女士</string>
    <string name="effective">有效</string>
    <string name="common_no_data">暂无相关信息</string>
    <string name="common_no_bank_tip">您还未添加任何银行卡哦</string>
    <string name="add_bank">去添加</string>
    <string name="project_img_detail_effect">效果图</string>
    <string name="project_img_detail_model">样板图</string>
    <string name="project_img_detail_layout">户型图</string>
    <string name="function_introduction">功能介绍</string>

    <!-- Independent Main -->
    <string name="main_bottom_tab_customer">客户</string>
    <string name="main_bottom_tab_project">楼盘</string>
    <string name="main_bottom_tab_todo">消息</string>
    <string name="main_bottom_tab_friend">好友</string>
    <string name="main_bottom_tab_me">我</string>
    <string name="user_info">个人设置</string>
    <string name="user_commission">我的佣金</string>
    <string name="commission">个人佣金</string>
    <string name="user_modify_pwd">修改密码</string>
    <string name="user_modify_account">修改绑定账号</string>
    <string name="user_check_version">检查更新</string>
    <string name="app_about">关于我们</string>
    <string name="user_exit">退出登录</string>
    <string name="user_avatar">头像</string>
    <string name="user_name">真实姓名</string>
    <string name="user_gender">性别</string>
    <string name="user_email">邮箱</string>
    <string name="user_phone">电话</string>
    <string name="user_protocol">用户协议</string>
    <string name="user_feedback">用户反馈</string>
    <string name="user_bank_card">银行卡</string>
    <string name="user_cooperate_rule">合作规则</string>
    <string name="user_calculator">房贷计算器</string>
    <string name="user_feedback_hint">请输入您对产品的意见和建议</string>
    <string name="add_bank_card_tip">请输入您的银行卡信息</string>
    <string name="bank_card_num">银行卡号:</string>
    <string name="bank_card_user_name">开户人:</string>
    <string name="bank_card_name">开户行:</string>
    <string name="no_settle_commission">未结佣金(元)</string>
    <string name="total_commission">总计佣金(元)</string>
    <string name="app_message">站内消息</string>

    <!-- Message -->
    <string name="message_contact_customer">联系客户</string>
    <string name="message_customer_progress">客户进度</string>
    <string name="message_customer_trace">客户追踪</string>
    <string name="message_project_dynamic">楼盘动态</string>
    <string name="message_cooperate_rule">合作规则</string>

    <!-- Customer State -->
    <string name="customer_status">客户进度</string>
    <string name="customer_status_report">报备</string>
    <string name="customer_status_visit">到访</string>
    <string name="customer_status_from">认筹</string>
    <string name="customer_status_appointment">预约</string>
    <string name="customer_status_deal">成交</string>
    <string name="customer_status_has_report">已报备</string>
    <string name="customer_status_to_be_verify">待验证</string>
    <string name="report_status_to_be_verify">报备待验证</string>
    <string name="report_status_effect">有效</string>
    <string name="visit_status_to_be_verify">到访待验证</string>
    <string name="customer_status_done">结佣</string>
    <string name="customer_set_back_visit_time">设置回访时间</string>
    <string name="customer_record">客户记录</string>
    <string name="customer_trace_record">客户回访记录</string>
    <string name="customer_trace_record_more">查看更多记录</string>
    <string name="customer_detail_project_area">区域:</string>
    <string name="customer_detail_project_price">总价:</string>
    <string name="customer_detail_project_layout">户型:</string>
    <string name="customer_detail_project_type">类型:</string>
    <string name="no_trace_record">暂无客户纪录</string>
</resources>
