<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/common_bg_content"
              android:orientation="vertical" >

    <include layout="@layout/common_view_top_bar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_divider"
        android:contentDescription="@string/img_desc"
        android:src="@color/common_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_divider"
            android:contentDescription="@string/img_desc"
            android:src="@color/common_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_item_height" >

            <EditText
                android:id="@id/id_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="16dp"
                android:hint="@string/new_password_hint"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/common_margin"
                android:paddingRight="@dimen/common_margin"
                android:textColorHint="@color/common_hint_color"
                android:textSize="@dimen/common_hint_text_size" />

            <ImageView
                android:id="@id/id_password_delete"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/img_desc"
                android:paddingRight="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_cancel"
                android:visibility="gone" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_divider"
            android:layout_marginLeft="45dp"
            android:contentDescription="@string/img_desc"
            android:src="@color/common_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_item_height" >

            <EditText
                android:id="@id/id_et_confirm_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="16dp"
                android:hint="@string/confirm_new_pwd"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/common_margin"
                android:paddingRight="@dimen/common_margin"
                android:textColorHint="@color/common_hint_color"
                android:textSize="@dimen/common_hint_text_size" />

            <ImageView
                android:id="@id/id_et_confirm_pwd_delete"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/img_desc"
                android:paddingRight="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_cancel"
                android:textColorHint="@color/common_hint_color"
                android:visibility="gone" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_divider"
            android:contentDescription="@string/img_desc"
            android:src="@color/common_divider" />
    </LinearLayout>

    <Button
        android:id="@id/id_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/common_margin"
        android:layout_marginRight="@dimen/common_margin"
        android:layout_marginTop="50dp"
        android:background="@drawable/common_green_btn_bg"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>